fixes cover image alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -10930,7 +10930,7 @@ header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
   background: linear-gradient(to bottom, rgba(80, 80, 80, 0.85) 0%, rgba(80, 80, 80, 0.85) 90%), url("../assets/img/bg-masterlogo.png");
-  background-position: 15% center;
+  background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size:cover;
